--- a/css/new_payoll_form.css
+++ b/css/new_payoll_form.css
@@ -109,4 +109,13 @@ body{
     border-radius: 50%;
     margin-left: 12px;
 }
+select{
+    padding: 12px;
+    border: 1px solid #ccc;
+    resize: vertical;
+    font: normal normal normal 16px Roboto;
+    letter-spacing: 0px;
+    color: #42525f;
+    background-color: transparent;
+}
 *{box-sizing: border-box;}
