--- a/css/new_payoll_form.css
+++ b/css/new_payoll_form.css
@@ -3,6 +3,8 @@ body{
     margin:0;
     height: 100%;
 }
+
+
 .header{
     padding:15px 0;
     background-color: white;
@@ -40,6 +42,7 @@ body{
 
 .form-content {
     min-height:calc(100% -80px);
+    margin: 20px 0px 20px 0px;
     background-color:#f7f7f7;
     display:flex;
     justify-content: center;
@@ -49,9 +52,11 @@ body{
     
 .form {
     width: 65%;
+    margin: 20px 0px 20px 0px;
     padding: 44px 60px;
     background: #f7f7f7 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
+    border: 1px solid #f5f5f5;
     border-radius: 8px;
     opacity: 1;
 }
@@ -63,7 +68,7 @@ body{
     text-transform: capitalize;
     opacity: 1;
     padding-bottom: 20px;
-    align-items: center;
+    
 }
 
 .row-content{
@@ -96,6 +101,7 @@ body{
 .profile-radio-content {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .profile-radio-content > label {
@@ -117,11 +123,12 @@ select{
     letter-spacing: 0px;
     color: #42525f;
     background-color: transparent;
+    border-radius: 5px;
 }
 .buttonParent{
     display: flex;
     margin-bottom: 10px;
-    justify-content: space-between;
+    justify-content: flex-end;
     margin-top: 20px;
 }
 
@@ -150,6 +157,7 @@ select{
     text-decoration: none;
     text-align: center;
     background-color: #f5f5f5;
+    margin-right: 10px;
 } 
 .resetButton{
     text-decoration: none;
@@ -169,6 +177,7 @@ select{
 @media only screen and (max-width:600px){
     .form{
         margin-top: 10px;
+        width:110%;
     }
     .row{
         flex-direction: column;
